# NetworkRequestLib

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  install.bat  install.sh
include/: NetworkRequestLib_global.h  request.h
src/: request.cpp
